feat: aggiunge ricerca forward
