# src/main/java/systems/lordes/server/controller/GeocodeController.java
@@ -4,13 +4,16 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
-import systems.lordes.server.data.NominatimPointData;
+import systems.lordes.server.data.NominatimAddressResponseData;
 import systems.lordes.server.gen.api.Coordinate;
-import systems.lordes.server.gen.api.NominatimPoint;
+import systems.lordes.server.gen.api.NominatimForwardSearchRequest;
+import systems.lordes.server.gen.api.NominatimForwardSearchResponse;
 import systems.lordes.server.gen.controller.GeoApi;
 import systems.lordes.server.mapper.NominatimMapper;
 import systems.lordes.server.service.NominatimService;
 import systems.lordes.server.utils.ControllerUtils;
+
+import java.util.List;
 
 @RestController
 @RequestMapping(ControllerUtils.PREFIX_API_V1)
@@ -28,8 +31,13 @@ public class GeocodeController implements GeoApi {
     }
 
     @Override
-    public ResponseEntity<NominatimPoint> reverseGeocodeSearch(Coordinate coordinate) {
-        NominatimPointData nominatimPointData = this.nominatimService.reverseGeocode(coordinate);
+    public ResponseEntity<List<NominatimForwardSearchResponse>> forwardGeocodeSearch(NominatimForwardSearchRequest nominatimForwardSearchRequest) {
+        List<NominatimAddressResponseData> nominatimResponses = this.nominatimService.forwardGeocodeSearch(nominatimForwardSearchRequest);
+        return ResponseEntity.ok(nominatimMapper.toApi(nominatimResponses));    }
+
+    @Override
+    public ResponseEntity<NominatimForwardSearchResponse> reverseGeocodeSearch(Coordinate coordinate) {
+        NominatimAddressResponseData nominatimPointData = this.nominatimService.reverseGeocode(coordinate);
         return ResponseEntity.ok(nominatimMapper.toApi(nominatimPointData));
     }
 }
